# bop_renderer

./: CMakeLists.txt
osmesa-install/: osmesa-install.sh
osmesa-install/osdemo/: Makefile
samples/: renderer_minimal.py
